--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,11 +10,11 @@
   <!-- Meta Description -->
   <meta
     name="description"
-    content="Skill UP is your personal career growth assistant – get recommendations, fill skill gaps, and level up fast."
+    content="Path Craft is your personal career growth assistant – get recommendations, fill skill gaps, and level up fast."
   />
 
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="Skill UP - Personalized Career Planner" />
+  <meta property="og:title" content="Path Craft - Personalized Career Planner" />
   <meta property="og:description" content="Build your future with AI-powered career recommendations, skill mapping, and smart learning." />
   <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
   <meta property="og:url" content="https://yourdomain.com" />
@@ -22,7 +22,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Skill UP - Personalized Career Planner" />
+  <meta name="twitter:title" content="Path Craft - Personalized Career Planner" />
   <meta name="twitter:description" content="Build your future with AI-powered career recommendations, skill mapping, and smart learning." />
   <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
 
@@ -33,7 +33,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Page Title -->
-  <title>Skill UP - Personalized Career Planner</title>
+  <title>Path Craft - Personalized Career Planner</title>
 </head>
 
   <body>
